	time.

	* src/exmpp_factory.erl: Add functions to make common pubsub stanzas.

	* src/exmpp_jlib.erl: Add functions to convert #jid{} to string and
	the other way around. Style.

	* testsuite/test.sh: Fixed portability issues with sed(1) and head(1).

	* c_src/xmpp_ns.h.in, c_src/xmpp_attrs.h.in, c_src/xmpp_names.h.in:
	Added pubsub-related namespaces, element names and attribute names.

2006-10-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* priv/lib/Makefile.am: Copies of stringprep_drv.so,
	tls_drv.so and iconv_erl.so are useless, because they're not tested by
	the current testsuite.

	* include/exmpp.hrl: Corrections in comments.

	* src/exmpp_jlib.erl, src/jlib.erl, src/Emakefile.ini,
	src/Makefile.am: As we did with `exmpp_xml' and `xml', we split
	`exmpp_jlib' in `exmpp_jlib' and `jlib' to separate the old code with
	the new one. Because this module didn't received a lot of
	modifications and testing, we took this opportunity to import the last
	version of `jlib' from today's ejabberd repository.

	* src/exmpp_xml.erl, configure.ac: Add a compile-time flag to enable a
	workaround for `erl_ddll' reference count bug.

	* configure.ac, c_src/Makefile.am, ebin/Makefile.am: Add a flag to
	disable the compatibility modules.

	* ebin/exmpp.app.in, ebin/exmpp.appup.in: Application file and upgrade
	file update.

	* configure.ac, src/Emakefile.in, ebin/exmpp.app.in: If compatibility
	modules are disabled, don't build/list them.

2006-10-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl (start_parser): Unload driver if an error occurs
	with options handling.
	(stop_parser): Don't catch exceptions with port_close/1; the caller is
	responsible for catching them if he wants.

2006-10-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Préparation de la release 0.5.3.

	* ebin/exmpp.appup.in: Instructions de mise à jour depuis la version
	0.5.2.
